<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/computer">

    <TextView
        android:id="@+id/textFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:background="#F44336"
        android:text="@string/found"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textfoundnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/textFound"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:background="#F44336"/>

    <TextView
        android:id="@+id/textOf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F44336"
        android:text="@string/of"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textfoundnumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textScanedNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:background="#F44336"/>

    <TextView
        android:id="@+id/textScanUsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scans_used"
        app:layout_constraintEnd_toStartOf="@+id/textScanedNumber"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#FFFFFF"
        android:background="#F44336"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="-248dp" />

    <TableLayout
        android:id="@+id/MineSeeker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOf">


    </TableLayout>

    <TextView
        android:id="@+id/textTotalMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="@+id/textOf"
        app:layout_constraintStart_toEndOf="@+id/textOf"
        app:layout_constraintTop_toTopOf="@+id/textOf"
        android:textColor="#FFFFFF"
        android:background="#F44336" />

    <TextView
        android:id="@+id/textMines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mines"
        app:layout_constraintBottom_toBottomOf="@+id/textTotalMines"
        app:layout_constraintStart_toEndOf="@+id/textTotalMines"
        app:layout_constraintTop_toTopOf="@+id/textTotalMines"
        android:textColor="#FFFFFF"
        android:background="#F44336" />


</androidx.constraintlayout.widget.ConstraintLayout>
